[project]
name = "capston-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "google-generativeai>=0.8.6",
    "gradio>=6.17.3",
    "ipykernel>=7.3.0",
    "notebook>=7.6.0",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=2.2.2",
]
